git/forgejo/04-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-http
  namespace: git
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`git.polarys.im`)
      kind: Rule
      services:
        - name: forgejo-http
          port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: forgejo-ssh
  namespace: git
spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: forgejo-ssh
          port: 2222
